# final-project-level3-cv-08

./: .gitignore  README.md  pyproject.toml
app/: .env  README.md  __main__.py  backend.py  frontend.py  gcs.py  model.py  notion.py
app/DB/: README.md
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.css  App.js
app/frontend/src/component/: Message.js  SelectWithLabel.js
mmseg/apis/: __init__.py
mmseg/datasets/: __init__.py  builder.py
mmseg/models/: __init__.py
mmsegmentation/app/: Makefile  README.md  backend.py  config.py  config.yaml  confirm_button_hack.py  db.py  firm-lacing-374306-bfbd2d43b6ce.json  frontend.py  gcs.py  model.py  notion.py  notion.yaml
mmsegmentation/configs/_sawol_/convnext/: default_runtime.py  upernet_convnext_base_fp16_512x512_160k_ade20k.py  upernet_convnext_base_fp16_640x640_160k_ade20k.py
mmsegmentation/configs/_sawol_/convnext/datasets/: ade20k.py
mmsegmentation/configs/_sawol_/convnext/schedules/: schedule_160k.py
mmsegmentation/configs/_sawol_/segformer/: runtime.py  segformer_b3.py
mmsegmentation/configs/_sawol_/segformer/datasets/: dataset.py
mmsegmentation/configs/_sawol_/segformer/models/: segformer_mit-b0.py
mmsegmentation/configs/_sawol_/segformer/schedules/: schedule.py
mmsegmentation/configs/_sawol_/uper_swin/: runtime.py  uper_swin_base.py
mmsegmentation/my-app/src/: App.css  App.js
mmsegmentation/my-app/src/component/: InferenceResult.js  InputWithLabel.js  SelectWithLabel.js  UploadImage.js  Userinfo.js
utils/: json2png.ipynb  make_png.py  random_choice_file.ipynb
(+2 files in other folders)
